--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Criarte</title>
 </head>
 <body>
-    <h1>Bom dia!</h1>
+    
 </body>
 </html>
