--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <title>Criarte</title>
 </head>
 <body>
-    <h1>Olá mundo!</h1>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-dark">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <h1>Your Logo</h1>
+                </a>
+
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                    <i class="fas fa-bars text-white"></i>
+                </button>
+
+                <div class="collapse navbar-collapse" id="nav-principal">
+                    <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a href="" class="nav-link">Quem somos</a>
+                      </li>
+        
+                      <li class="nav-item divisor"></li>
+        
+                      <li class="nav-item">
+                        <a href="" class="nav-link">Contato</a>
+                      </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
