--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="conteudo">
 			<h3>Criarte</h3>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
+				Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
 			</p>
 
 			<p>
