--- a/index.html
+++ b/index.html
@@ -40,8 +40,37 @@
 				<span class="titulo">Torne seus sonhos realidade</span>
 			</div>
 		</div>
-    <footer>
-        
-    </footer>
+<footer>
+  <div class="conteudo-footer d-flex container">
+	<div class="left-content col-4 row mr-5">
+		<h1>Criarte</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus culpa, assumenda magni voluptatum beatae aliquam ex harum soluta repellendus nobis et earum ducimus inventore ipsa. Hic facilis pariatur magnam dolor!</p>
+	</div>
+	<div class="right-content col-8 row">
+	  
+      <div class="endereco-icon">
+	    <div class="d-flex">
+		  <h4 class="text-maps start">Onde estamos?</h4>
+		</div>  
+		  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16" class="icon-map">
+				<path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+		  </svg>
+			<span class="endereco">Praça de Novo Horizonte Av. Brasil - Novo Horizonte, Serra - ES, 29163-331</span>
+	    </div>
+
+		<div class="google-maps">
+		  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.0354485789044!2d-40.24770182445273!3d-20.215847947274096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710527129799!5m2!1spt-BR!2sbr" width="600" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	  </div>
+
+	</div>
+</div>
+  <div class="border-line"></div>
+	<div class="divider">
+	  <div class="container-all-rights">
+		  <span class="all-rights">&copy; 2024 | Todos os direitos reservados</span>
+	  </div>
+	</div>
+   
+</footer>
 </body>
 </html>
