--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="conteudo">
 			<h3>Criarte</h3>
 			<p>
-				Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
+				Lorem ipsaz\adaum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
 			</p>
 
 			<p>
@@ -41,13 +41,13 @@
 			</div>
 		</div>
 <footer>
-  <div class="conteudo-footer d-flex container">
-	<div class="left-content col-4 row mr-5">
+  <div class="conteudo-footer d-flex container col-md-6">
+	<div class="left-content col-md-4 row mr-5">
 		<h1>Criarte</h1>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus culpa, assumenda magni voluptatum beatae aliquam ex harum soluta repellendus nobis et earum ducimus inventore ipsa. Hic facilis pariatur magnam dolor!</p>
 	</div>
 
-	<div class="right-content col-8 row">
+	<div class="right-content col-md-8 row">
       <div class="endereco-icon">
 	    <div class="d-flex">
 		  <h4 class="text-maps start">Onde estamos?</h4>
@@ -63,10 +63,12 @@
 		</div>
 	</div>
 
-	<div class="container-all-rights">
+	
+ </div>
+
+	<div class="container-all-rights col-md-12">
 		<span class="all-rights">&copy; 2024 | Todos os direitos reservados</span>
 	</div>
- </div>
 </div>
 
 <div class="contact">
