changes in html for css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 
-		<div class="conteudo">
+		<div class="information-page">
 			<h3>Criarte</h3>
 			<p>
 				Lorem ipsaz\adaum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
@@ -59,7 +59,7 @@
 	    </div>
 
 		<div class="google-maps">
-		  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.0354485789044!2d-40.24770182445273!3d-20.215847947274096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710527129799!5m2!1spt-BR!2sbr" width="600" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.0354485789044!2d-40.24770182445273!3d-20.215847947274096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710527129799!5m2!1spt-BR!2sbr" width="140%" height="130" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 	</div>
 
@@ -72,7 +72,7 @@
 </div>
 
 <div class="contact">
-	<a href="#"><img class="icon" src="imagens/icon-wpp.png"></a>
+	<a href="#"><img class="icon" src="/assets/imagens/icon-wpp.png"></a>
 </div>
 
 </footer>
