--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 			<div class="conteudo-titulo">
 				<span class="titulo">Torne seus sonhos realidade</span>
 			</div>
+		<div class="informations-boxes">
+			<div class="content-box1"></div>
+			<div class="content-box2"></div>
+		</div>		
 		</div>
 <footer>
   <div class="conteudo-footer d-flex container col-md-6">
@@ -57,9 +61,9 @@
 		 </svg>
 		  <span class="endereco">Praça de Novo Horizonte Av. Brasil - Novo Horizonte, Serra - ES, 29163-331</span>
 	    </div>
-
+        <!--nao é a PORRA do google maps que ta fudendo com o footer-->	
 		<div class="google-maps">
-		  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.0354485789044!2d-40.24770182445273!3d-20.215847947274096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710527129799!5m2!1spt-BR!2sbr" width="140%" height="130" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     	  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.0354485789044!2d-40.24770182445273!3d-20.215847947274096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710527129799!5m2!1spt-BR!2sbr" width="90%" height="50%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 	</div>
 
