creation boxes page2

--- a/index.html
+++ b/index.html
@@ -40,8 +40,18 @@
 				<span class="titulo">Torne seus sonhos realidade</span>
 			</div>
 		<div class="informations-boxes">
-			<div class="content-box1"></div>
-			<div class="content-box2"></div>
+			<div class="page-2-boxes">
+				<div class="content-box1">
+					<h3>Venha Crescer com a gente</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat architecto temporibus delectus, id quae autem neque sint alias libero maxime vel ipsam nesciunt explicabo unde ex est reiciendis sed.</p>
+					<button type="button" class="button-box-1">Quer uma avaliação?</button>
+				</div>
+				<div class="content-box2">
+					<h3>Referencia em Marketing Digital!</h3>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore, vel alias quisquam molestias officia adipisci voluptate illum similique explicabo cum mollitia iure repellat rem! Optio perspiciatis possimus ipsum voluptatem?</p>
+					<button type="button" class="button-box-2">Entre em contato!</button>
+				</div>
+			</div>	
 		</div>		
 		</div>
 		<footer>  
