fix errors and responsiveness

--- a/index.html
+++ b/index.html
@@ -3,24 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/assets/styles.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="assets/styles.css" media="screen" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 
     <!--- BootStrap 4-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    <title>Criarte</title>
+   
+	<title>Criarte</title>
 </head>
 <body>
-        <div class="caixa1">
-			<div class="conteudo-titulo">
-				<span class="titulo">Criarte</span>
+		<div class="box1">
+			<div class="content-title">
+				<img src="assets/imagens/logo.png" alt="" width="150px" height="80px">
+			</div>
+		
+			<div class="container">
+				<div class="description-marketing">
+					<h2>Marketing Digital</h2>
+					<p>Quer acelerar o crescimento do seu negócio?</p>
+					<p>converter mais clientes e superar a concorrência?</p>
+					<p>Contrate um serviço especializado!</p>
+					<br>
+					<button>Saiba Mais</button>
+				</div>
+				<img src="assets/imagens/marketin-digitalnoback.png" class="imagem-marketing" width="700px" height="500px">
 			</div>
 		</div>
-
-		<div class="information-page">
+			
+		<div class="content">
 			<h3>Criarte</h3>
 			<p>
-				Lorem ipsaz\adaum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
+				Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
 			</p>
 
 			<p>
@@ -35,41 +51,47 @@
 
 		</div>
 
-		<div class="caixa2">
-			<div class="conteudo-titulo">
-				<span class="titulo">Torne seus sonhos realidade</span>
-			</div>
+		<div class="box2">
 		<div class="informations-boxes">
 			<div class="page-2-boxes">
 				<div class="content-box1">
-					<h3>Venha Crescer com a gente</h3>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat architecto temporibus delectus, id quae autem neque sint alias libero maxime vel ipsam nesciunt explicabo unde ex est reiciendis sed.</p>
-					<button type="button" class="button-box-1">Quer uma avaliação?</button>
+					<div>
+						<h3>Venha Crescer com a gente</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat architecto temporibus delectus, id quae autem neque sint alias libero maxime vel ipsam nesciunt explicabo unde ex est reiciendis sed.</p>
+					</div>
+					<div>
+						<button type="button" class="button-box-1">Quer uma avaliação?</button>
+					</div>
 				</div>
 				<div class="content-box2">
-					<h3>Referencia em Marketing Digital!</h3>
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore, vel alias quisquam molestias officia adipisci voluptate illum similique explicabo cum mollitia iure repellat rem! Optio perspiciatis possimus ipsum voluptatem?</p>
+					<div>
+						<h3>Referencia em Marketing Digital!</h3>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore, vel alias quisquam molestias officia adipisci voluptate illum similique explicabo cum mollitia iure repellat rem! Optio perspiciatis possimus ipsum voluptatem?</p>
+					</div>
+					<div>
 					<button type="button" class="button-box-2">Entre em contato!</button>
+					</div>
 				</div>
 			</div>	
 		</div>		
 		</div>
-		<footer>  
-			<div id="footer-content">
-				<div id="footer-text">
-					<h1>Criarte</h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quia magnam animi, laudantium repellendus harum ullam, fugit nulla, autem perferendis dolor quidem quaerat voluptates nostrum quos alias. Ducimus, odit voluptatibus.</p>
-				</div>
+	<footer>  
+	<div id="footer-content">
+		<div id="footer-text">
+			<h3>Criarte</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quia magnam animi, laudantium repellendus harum ullam, fugit nulla, autem perferendis dolor quidem quaerat voluptates nostrum quos alias. Ducimus, odit voluptatibus.</p>
+		</div>
 				
-				<div id="footer-localization">
-					<h3>Onde estamos?</h3>
-					<p>Praça de Novo Horizonte Av. Brasil - Novo Horizonte, Serra - ES, 29163-331</p>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.035327446236!2d-40.24770182459217!3d-20.215852981237795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710790099303!5m2!1spt-BR!2sbr" width=90% height=50% style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-				</div>
-			</div>
-			<div id="footer-copyright">
-				&#169 2024 Todos os direitos reservados
-			</div>
-		</footer>    
+		<div id="footer-localization">
+			<h3>Onde estamos?</h3>
+			<p>Praça de Novo Horizonte Av. Brasil - Novo Horizonte, Serra - ES, 29163-331</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.035327446236!2d-40.24770182459217!3d-20.215852981237795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710790099303!5m2!1spt-BR!2sbr" width=90% height=50% style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</div>
+	</div>
+
+		<div id="footer-copyright">
+			&#169 2024 Todos os direitos reservados
+		</div>
+</footer>    
 </body>
 </html>
