set new background first page

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 		
 			<div class="container">
 				<div class="description-marketing">
-					<h2>Marketing Digital</h2>
+					<h1>Marketing Digital</h1>
 					<p>Quer acelerar o crescimento do seu negócio?</p>
 					<p>converter mais clientes e superar a concorrência?</p>
 					<p>Contrate um serviço especializado!</p>
 					<br>
 					<button>Saiba Mais</button>
 				</div>
-				<img src="assets/imagens/marketin-digitalnoback.png" class="imagem-marketing" width="700px" height="500px">
+				<!--<img src="assets/imagens/marketin-digitalnoback.png" class="imagem-marketing" width="700px" height="500px">-->
 			</div>
 		</div>
 			
