--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles.css" media="screen" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
+	<script defer src="app.js"></script>
 
     <!--- BootStrap 4-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -20,8 +20,8 @@
 				<img src="assets/imagens/logo.png" alt="" width="150px" height="80px">
 			</div>
 		
-			<div class="container">
-				<div class="description-marketing">
+			<div class="container hidden">
+				<div class="description-marketing hidden">
 					<h1>Marketing Digital</h1>
 					<p>Quer acelerar o crescimento do seu negócio?</p>
 					<p>converter mais clientes e superar a concorrência?</p>
@@ -33,28 +33,29 @@
 			</div>
 		</div>
 			
-		<div class="content">
-			<h3>Criarte</h3>
-			<p>
-				Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
-			</p>
-
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
-			</p>
-            <p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
-			</p>
-            <p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.
+		<div class="content hidden">
+			<h3 class="hidden">Criarte</h3>
+			<p class="hidden">
+			Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a 
+			justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra 
+			vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna 
+			nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.<br>
+			Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a 
+			justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra 
+			vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna 
+			nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.<br>
+			Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a 
+			justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra 
+			vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna 
+			nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.<br>
 			</p>
 
 		</div>
 
-		<div class="box2">
-		<div class="informations-boxes">
-			<div class="page-2-boxes">
-				<div class="content-box1">
+		<div class="box2 hidden">
+		<div class="informations-boxes hidden">
+			<div class="page-2-boxes hidden">
+				<div class="content-box1 hidden">
 					<div>
 						<h3>Venha Crescer com a gente</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat architecto temporibus delectus, id quae autem neque sint alias libero maxime vel ipsam nesciunt explicabo unde ex est reiciendis sed.</p>
@@ -63,7 +64,7 @@
 						<button type="button" class="button-box-1">Quer uma avaliação?</button>
 					</div>
 				</div>
-				<div class="content-box2">
+				<div class="content-box2 hidden">
 					<div>
 						<h3>Referencia em Marketing Digital!</h3>
 						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore, vel alias quisquam molestias officia adipisci voluptate illum similique explicabo cum mollitia iure repellat rem! Optio perspiciatis possimus ipsum voluptatem?</p>
@@ -76,20 +77,20 @@
 		</div>		
 		</div>
 	<footer>  
-	<div id="footer-content">
-		<div id="footer-text">
+	<div id="footer-content" class="hidden">
+		<div id="footer-text" class="hidden">
 			<h3>Criarte</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quia magnam animi, laudantium repellendus harum ullam, fugit nulla, autem perferendis dolor quidem quaerat voluptates nostrum quos alias. Ducimus, odit voluptatibus.</p>
 		</div>
 				
-		<div id="footer-localization">
+		<div id="footer-localization" class="hidden">
 			<h3>Onde estamos?</h3>
 			<p>Praça de Novo Horizonte Av. Brasil - Novo Horizonte, Serra - ES, 29163-331</p>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.035327446236!2d-40.24770182459217!3d-20.215852981237795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710790099303!5m2!1spt-BR!2sbr" width=90% height=50% style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 	</div>
 
-		<div id="footer-copyright">
+		<div id="footer-copyright" class="hidden">
 			&#169 2024 Todos os direitos reservados
 		</div>
 </footer>    
