set whatsapp icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 		<div class="box1">
 			<div class="content-title">
-				<img src="assets/imagens/logo.png" alt="" width="150px" height="80px">
+				<a href="index.html"><img src="assets/imagens/logo.png" alt="" width="150px" height="80px"></a>
 			</div>
 		
 			<div class="container hidden">
@@ -93,6 +93,10 @@
 		<div id="footer-copyright" class="hidden">
 			&#169 2024 Todos os direitos reservados
 		</div>
-</footer>    
+
+		<div class="contact">
+			<a href="#"><img class="icon" src="assets/imagens/icon-wpp.png"></a>
+		</div>
+</footer>  
 </body>
 </html>
