--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles.css" media="screen" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script defer src="app.js"></script>
 
     <!--- BootStrap 4-->
@@ -33,24 +34,42 @@
 			</div>
 		</div>
 			
-		<div class="content hidden">
-			<h3 class="hidden">Criarte</h3>
-			<p class="hidden">
-			Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a 
-			justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra 
-			vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna 
-			nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.<br>
-			Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a 
-			justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra 
-			vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna 
-			nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.<br>
-			Lorem ipsum dolor sit amet, condsectetur adipiscing elit. Donec eget leo sit amet ligula feugiat laoreet dapibus a 
-			justo. Curabitur eu libero vel felis pulvinar vestibulum. Ut risus justo, ullamcorper ac vestibulum eu, pharetra 
-			vitae erat. Praesent sollicitudin, ligula non elementum pharetra, risus ligula sagittis lectus, non semper urna 
-			nisl vitae urna. Ut vitae augue tristique, congue justo vitae, dapibus arcu.<br>
-			</p>
-
+	<div class="content hidden">
+	<h3 class="box-sc">Criarte</h3>
+	 <p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
+		<div class="father-div-sc">
+			<div class="services-cards">
+				<i class="bi bi-body-text icons-sc"></i>
+				<p>criação de blogposts</p>
+				<button>Saiba Mais</button>
+			</div>
+			<div class="services-cards">
+				<i class="bi bi-journal icons-sc"></i>
+				<p>criação de e-books</p>
+				<button>Saiba Mais</button>
+			</div>
+			<div class="services-cards">
+				<i class="bi bi-brush icons-sc"></i>
+				<p>criação de posts</p>
+				<button>Saiba Mais</button>
+			</div>
+			<div class="services-cards">
+				<i class="bi bi-shop icons-sc"></i>
+				<p>marketing digital</p>
+				<button>Saiba Mais</button>
+			</div>
+			<div class="services-cards">
+				<i class="bi bi-google icons-sc"></i>
+				<p>tráfego pago</p>
+				<button>Saiba Mais</button>
+			</div>
+			<div class="services-cards">
+				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
+				<p>website e landingpage</p>
+				<button>Saiba Mais</button>
+			</div>
 		</div>
+	</div>
 
 		<div class="box2 hidden">
 		<div class="informations-boxes hidden">
