Set button styles

--- a/index.html
+++ b/index.html
@@ -28,45 +28,45 @@
 					<p>converter mais clientes e superar a concorrência?</p>
 					<p>Contrate um serviço especializado!</p>
 					<br>
-					<button>Saiba Mais</button>
+					<button class="btn-main"><p>Conheça</p></button>
 				</div>
 				<!--<img src="assets/imagens/marketin-digitalnoback.png" class="imagem-marketing" width="700px" height="500px">-->
 			</div>
 		</div>
 			
 	<div class="content hidden">
-	<h3 class="box-sc">Criarte</h3>
+	<h3 class="box-sc">Nossos serviços</h3>
 	 <p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
 		<div class="father-div-sc">
 			<div class="services-cards">
 				<i class="bi bi-body-text icons-sc"></i>
-				<p>criação de blogposts</p>
-				<button>Saiba Mais</button>
+				<p>Criação de blogposts</p>
+				<button class="more-button">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-journal icons-sc"></i>
-				<p>criação de e-books</p>
-				<button>Saiba Mais</button>
+				<p>Criação de e-books</p>
+				<button class="more-button">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-brush icons-sc"></i>
-				<p>criação de posts</p>
-				<button>Saiba Mais</button>
+				<p>Criação de posts</p>
+				<button class="more-button">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-shop icons-sc"></i>
-				<p>marketing digital</p>
-				<button>Saiba Mais</button>
+				<p>Marketing digital</p>
+				<button class="more-button">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-google icons-sc"></i>
-				<p>tráfego pago</p>
-				<button>Saiba Mais</button>
+				<p>Tráfego pago</p>
+				<button class="more-button">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
-				<p>website e landingpage</p>
-				<button>Saiba Mais</button>
+				<p>Website e landingpage</p>
+				<button class="more-button">Saiba Mais</button>
 			</div>
 		</div>
 	</div>
@@ -114,7 +114,7 @@
 		</div>
 
 		<div class="contact">
-			<a href="#"><img class="icon" src="assets/imagens/icon-wpp.png"></a>
+			<a target="_blank" href="https://wa.me/5527988783410"><img class="icon" src="assets/imagens/icon-wpp.png"></a>
 		</div>
 </footer>  
 </body>
