--- a/index.html
+++ b/index.html
@@ -34,39 +34,46 @@
 			</div>
 		</div>
 			
-	<div class="content hidden">
+ <div class="content hidden">
 	<h3 class="box-sc">Nossos serviços</h3>
 	 <p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
 		<div class="father-div-sc">
+			<!-- div do modal para aparecer na tela: (esta dando bug)
+				<div class="window-modal" id="window-modal">
+	<div class="modal">
+		<button class="close-button" id="close-button">X</button>
+		<h1>Janela modal</h1>
+		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione adipisci tempora dolorem laudantium doloremque voluptates eveniet, neque velit unde cumque, nisi repellendus eos a commodi officia debitis architecto nulla repudiandae.</p>
+	</div>   -->
 			<div class="services-cards">
 				<i class="bi bi-body-text icons-sc"></i>
 				<p>Criação de blogposts</p>
-				<button class="more-button">Saiba Mais</button>
+				<button class="more-button" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-journal icons-sc"></i>
 				<p>Criação de e-books</p>
-				<button class="more-button">Saiba Mais</button>
+				<button class="more-button" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-brush icons-sc"></i>
 				<p>Criação de posts</p>
-				<button class="more-button">Saiba Mais</button>
+				<button class="more-button" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-shop icons-sc"></i>
 				<p>Marketing digital</p>
-				<button class="more-button">Saiba Mais</button>
+				<button class="more-button" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-google icons-sc"></i>
 				<p>Tráfego pago</p>
-				<button class="more-button">Saiba Mais</button>
+				<button class="more-button" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
 				<p>Website e landingpage</p>
-				<button class="more-button">Saiba Mais</button>
+				<button class="more-button" onclick="openModal()">Saiba Mais</button>
 			</div>
 		</div>
 	</div>
