set animation effect on the cards

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		</div>
 			
  <div class="content hidden">
-	<h3 class="box-sc">Nossos serviços</h3>
+	<h3 class="box-sc hidden">Nossos serviços</h3>
 	 <p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
-		<div class="father-div-sc">
+		<div class="father-div-sc hidden">
 			<!-- div do modal para aparecer na tela: (esta dando bug)
 				<div class="window-modal" id="window-modal">
 	<div class="modal">
@@ -45,35 +45,35 @@
 		<h1>Janela modal</h1>
 		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione adipisci tempora dolorem laudantium doloremque voluptates eveniet, neque velit unde cumque, nisi repellendus eos a commodi officia debitis architecto nulla repudiandae.</p>
 	</div>   -->
-			<div class="services-cards">
-				<i class="bi bi-body-text icons-sc"></i>
+			<div class="services-cards hidden">
+				<i class="bi bi-body-text icons-sc hidden"></i>
 				<p>Criação de blogposts</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button hidden" onclick="openModal()">Saiba Mais</button>
 			</div>
-			<div class="services-cards">
-				<i class="bi bi-journal icons-sc"></i>
+			<div class="services-cards hidden">
+				<i class="bi bi-journal icons-sc hidden"></i>
 				<p>Criação de e-books</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button hidden" onclick="openModal()">Saiba Mais</button>
 			</div>
-			<div class="services-cards">
-				<i class="bi bi-brush icons-sc"></i>
+			<div class="services-cards hidden">
+				<i class="bi bi-brush icons-sc hidden"></i>
 				<p>Criação de posts</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button hidden" onclick="openModal()">Saiba Mais</button>
 			</div>
-			<div class="services-cards">
-				<i class="bi bi-shop icons-sc"></i>
+			<div class="services-cards hidden">
+				<i class="bi bi-shop icons-sc hidden"></i>
 				<p>Marketing digital</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button hidden" onclick="openModal()">Saiba Mais</button>
 			</div>
-			<div class="services-cards">
-				<i class="bi bi-google icons-sc"></i>
+			<div class="services-cards hidden">
+				<i class="bi bi-google icons-sc hidden"></i>
 				<p>Tráfego pago</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button hidden" onclick="openModal()">Saiba Mais</button>
 			</div>
-			<div class="services-cards">
-				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
+			<div class="services-cards hidden">
+				<i class="bi bi-layout-text-window-reverse icons-sc hidden"></i>
 				<p>Website e landingpage</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button hidden" onclick="openModal()">Saiba Mais</button>
 			</div>
 		</div>
 	</div>
