set dialog tag and in html, styles and script to

--- a/index.html
+++ b/index.html
@@ -35,38 +35,43 @@
 		</div>
 			
  <div class="content hidden">
+	<dialog>
+		<h1>Janela Modal</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate neque aperiam hic ratione, perferendis sit, mollitia tempora quibusdam quae nulla nam! Esse saepe delectus a voluptatum sapiente tenetur officia nihil?</p>
+	    <button class="more-button">Fechar</button>
+	</dialog>
 	<h3 class="box-sc">Nossos serviços</h3>
 	 <p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
 		<div class="father-div-sc">   
 			<div class="services-cards">
 				<i class="bi bi-body-text icons-sc"></i>
 				<p>Criação de blogposts</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button" id="btn-more">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-journal icons-sc"></i>
 				<p>Criação de e-books</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button" id="btn-more">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-brush icons-sc"></i>
 				<p>Criação de posts</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button" id="btn-more">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-shop icons-sc"></i>
 				<p>Marketing digital</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button" id="btn-more">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-google icons-sc"></i>
 				<p>Tráfego pago</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button" id="btn-more">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
 				<p>Website e landingpage</p>
-				<button class="more-button" onclick="openModal()">Saiba Mais</button>
+				<button class="more-button" id="btn-more">Saiba Mais</button>
 			</div>
 	</div>
 </div>	
