--- a/index.html
+++ b/index.html
@@ -1,88 +1,124 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/styles.css" media="screen" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="assets/styles.css" media="screen" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script defer src="app.js"></script>
 
-    <!--- BootStrap 4-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-   
+	<!--- BootStrap 4-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+		crossorigin="anonymous"></script>
+
 	<title>Criarte</title>
 </head>
+
 <body>
-		<div class="box1">
-			<div class="content-title">
-				<a href="index.html"><img src="assets/imagens/logo.png" alt="" width="150px" height="80px"></a>
-			</div>
-		
-			<div class="container hidden">
-				<div class="description-marketing hidden">
-					<h1>Marketing Digital</h1>
-					<p>Quer acelerar o crescimento do seu negócio?</p>
-					<p>converter mais clientes e superar a concorrência?</p>
-					<p>Contrate um serviço especializado!</p>
-					<br>
-					<button class="btn-main"><p>Conheça</p></button>
-				</div>
-				<!--<img src="assets/imagens/marketin-digitalnoback.png" class="imagem-marketing" width="700px" height="500px">-->
-			</div>
+	<div class="box1">
+		<div class="content-title">
+			<a href="index.html"><img src="assets/imagens/logo.png" alt="" width="150px" height="80px"></a>
 		</div>
-			
- <div class="content hidden">
-	<dialog>
-		<h1>Janela Modal</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate neque aperiam hic ratione, perferendis sit, mollitia tempora quibusdam quae nulla nam! Esse saepe delectus a voluptatum sapiente tenetur officia nihil?</p>
-	    <button class="more-button" onclick="closeModal()">Fechar</button>
-	</dialog>
-	<h3 class="box-sc">Nossos serviços</h3>
-	 <p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
-		<div class="father-div-sc">   
+
+		<div class="container hidden">
+			<div class="description-marketing hidden">
+				<h1>Marketing Digital</h1>
+				<p>Quer acelerar o crescimento do seu negócio?</p>
+				<p>converter mais clientes e superar a concorrência?</p>
+				<p>Contrate um serviço especializado!</p>
+				<br>
+				<button class="btn-main">
+					<p>Conheça</p>
+				</button>
+
+				<div class="card-container">
+					<div class="card">
+						<div class="img-content"></div>
+						<div class="content-main">
+							<p class="heading">Conheça mais</p>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipii
+								voluptas ten mollitia pariatur odit, ab
+								minus ratione adipisci accusamus vel est excepturi laboriosam magnam
+								necessitatibus dignissimos molestiasaaaaa.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--<img src="assets/imagens/marketin-digitalnoback.png" class="imagem-marketing" width="700px" height="500px">-->
+		</div>
+	</div>
+
+	<div class="content hidden">
+		<dialog>
+			<h1>Janela Modal</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate neque aperiam hic ratione,
+				perferendis sit, mollitia tempora quibusdam quae nulla nam! Esse saepe delectus a voluptatum sapiente
+				tenetur officia nihil?</p>
+			<button class="more-button" onclick="closeModal()">Fechar</button>
+		</dialog>
+		<h3 class="box-sc">Soluções oferecidas</h3>
+		<p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
+		<div class="father-div-sc">
 			<div class="services-cards">
 				<i class="bi bi-body-text icons-sc"></i>
-				<p>Criação de blogposts</p>
+				<p>Criação de Logomarcas</p>
 				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-journal icons-sc"></i>
-				<p>Criação de e-books</p>
-				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
-			</div>
-			<div class="services-cards">
-				<i class="bi bi-brush icons-sc"></i>
 				<p>Criação de posts</p>
 				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
+				<i class="bi bi-brush icons-sc"></i>
+				<p>Trafego pago</p>
+				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
+			</div>
+			<div class="services-cards">
 				<i class="bi bi-shop icons-sc"></i>
-				<p>Marketing digital</p>
+				<p>Social media</p>
 				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-google icons-sc"></i>
-				<p>Tráfego pago</p>
+				<p>Otimização para Mecanismos</p>
 				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
 			</div>
 			<div class="services-cards">
 				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
-				<p>Website e landingpage</p>
+				<p>Marketing digital</p>
 				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
 			</div>
+			<div class="services-cards">
+				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
+				<p>Website e Landingpage</p>
+				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
+			</div>
+			<div class="services-cards">
+				<i class="bi bi-layout-text-window-reverse icons-sc"></i>
+				<p>Loja virtual</p>
+				<button class="more-button" id="btn-more" onclick="openModal()">Saiba Mais</button>
+			</div>
+		</div>
 	</div>
-</div>	
 
-		<div class="box2 hidden">
+	<div class="box2 hidden">
 		<div class="informations-boxes hidden">
 			<div class="page-2-boxes hidden">
 				<div class="content-box1 hidden">
 					<div>
 						<h3>Venha Crescer com a gente</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat architecto temporibus delectus, id quae autem neque sint alias libero maxime vel ipsam nesciunt explicabo unde ex est reiciendis sed.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat architecto
+							temporibus delectus, id quae autem neque sint alias libero maxime vel ipsam nesciunt
+							explicabo unde ex est reiciendis sed.</p>
 					</div>
 					<div>
 						<button type="button" class="button-box-1">Quer uma avaliação?</button>
@@ -91,36 +127,45 @@
 				<div class="content-box2 hidden">
 					<div>
 						<h3>Referencia em Marketing Digital!</h3>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore, vel alias quisquam molestias officia adipisci voluptate illum similique explicabo cum mollitia iure repellat rem! Optio perspiciatis possimus ipsum voluptatem?</p>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error inventore, vel alias quisquam
+							molestias officia adipisci voluptate illum similique explicabo cum mollitia iure repellat
+							rem! Optio perspiciatis possimus ipsum voluptatem?</p>
 					</div>
 					<div>
-					<button type="button" class="button-box-2">Entre em contato!</button>
+						<button type="button" class="button-box-2">Entre em contato!</button>
 					</div>
 				</div>
-			</div>	
-		</div>		
-		</div>
-	<footer>  
-	<div id="footer-content" class="hidden">
-		<div id="footer-text" class="hidden">
-			<h3>Criarte</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quia magnam animi, laudantium repellendus harum ullam, fugit nulla, autem perferendis dolor quidem quaerat voluptates nostrum quos alias. Ducimus, odit voluptatibus.</p>
-		</div>
-				
-		<div id="footer-localization" class="hidden">
-			<h3>Onde estamos?</h3>
-			<p>Praça de Novo Horizonte Av. Brasil - Novo Horizonte, Serra - ES, 29163-331</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.035327446236!2d-40.24770182459217!3d-20.215852981237795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710790099303!5m2!1spt-BR!2sbr" width=90% height=50% style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
 		</div>
 	</div>
+	<footer>
+		<div id="footer-content" class="hidden">
+			<div id="footer-text" class="hidden">
+				<h3>Criarte</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quia magnam animi, laudantium
+					repellendus harum ullam, fugit nulla, autem perferendis dolor quidem quaerat voluptates nostrum quos
+					alias. Ducimus, odit voluptatibus.</p>
+			</div>
+
+			<div id="footer-localization" class="hidden">
+				<h3>Onde estamos?</h3>
+				<p>Praça de Novo Horizonte Av. Brasil - Novo Horizonte, Serra - ES, 29163-331</p>
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.035327446236!2d-40.24770182459217!3d-20.215852981237795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81eb5006825bb%3A0x44e25b2399dc2536!2sPra%C3%A7a%20de%20Novo%20Horizonte!5e0!3m2!1spt-BR!2sbr!4v1710790099303!5m2!1spt-BR!2sbr"
+					width=90% height=50% style="border:0;" allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+		</div>
 
 		<div id="footer-copyright" class="hidden">
 			&#169 2024 Todos os direitos reservados
 		</div>
 
 		<div class="contact">
-			<a target="_blank" href="https://wa.me/5527988783410"><img class="icon" src="assets/imagens/icon-wpp.png"></a>
+			<a target="_blank" href="https://wa.me/5527988783410"><img class="icon"
+					src="assets/imagens/icon-wpp.png"></a>
 		</div>
-</footer>  
+	</footer>
 </body>
+
 </html>
