new position in box-pages-2 and new image

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 
 	<title>Criarte</title>
 </head>
-
 <body>
+	<div class="content-title">
+		<a href="index.html"><img src="assets/imagens/logo.png" alt="Criarte" width="150px" height="80px"></a>
+	</div>
 	<div class="box1">
-		<div class="content-title">
-			<a href="index.html"><img src="assets/imagens/logo.png" alt="" width="150px" height="80px"></a>
-		</div>
 
 		<div class="container hidden">
 			<div class="description-marketing hidden">
@@ -66,7 +65,7 @@
 		</dialog>
 		<h3 class="box-sc">Soluções oferecidas</h3>
 		<p>oferecemos assessoria completa em marketing digital para alavancar seu negócio</p>
-		<div class="father-div-sc">
+		<div class="father-div-sc hidden">
 			<div class="services-cards">
 				<i class="bi bi-body-text icons-sc"></i>
 				<p>Criação de Logomarcas</p>
