fix image main position

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
 		<div class="container hidden">
 			<div class="description-marketing hidden">
-				<h1>Marketing Digital</h1>
-				<p>Quer acelerar o crescimento do seu negócio?</p>
-				<p>converter mais clientes e superar a concorrência?</p>
-				<p>Contrate um serviço especializado!</p>
+				<h1>Aumente os resultados do seu negócio através da internet</h1>
+				<p>Já imaginou alavancar o seu negócio através da internet? Nós da Criarte
+					podemos te ajudar! Oferecemos soluções digitais completas para colocar
+					o seu negócio online e aumentar o seu faturamento.
+				</p>
 				<br>
 				<button class="btn-main">
-					<p>Conheça</p>
+					<p>ENTRAR EM CONTATO</p>
 				</button>
 
 				<div class="card-container">
@@ -51,7 +52,6 @@
 					</div>
 				</div>
 			</div>
-			<!--<img src="assets/imagens/marketin-digitalnoback.png" class="imagem-marketing" width="700px" height="500px">-->
 		</div>
 	</div>
 
